# livraria

./: db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor_livro.py  0004_livro_autores.py
livraria/models/: __init__.py  autor.py  categoria.py  livro.py
livraria/serializers/: __init__.py  livro.py
livraria/views/: __init__.py  autor.py  categoria.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
